Slider main functions

--- a/projects/slider/src/lib/slider/slider.component.html
+++ b/projects/slider/src/lib/slider/slider.component.html
@@ -1,1 +1,6 @@
-<p>slider works!</p>
+<img [src]="currentSlide().image" width="400" height="400">
+
+<p>
+  <button (click)="prev()">Prev</button>
+  <button (click)="next()">Next</button>
+</p>
