--- a/projects/app/src/app/app.component.html
+++ b/projects/app/src/app/app.component.html
@@ -1,4 +1,7 @@
-<lib-slider></lib-slider>
-<lib-slider></lib-slider>
-<lib-slider></lib-slider>
-<lib-slider></lib-slider>
+
+@if (slides$ | async; as slides) {
+  <lib-slider [slides]="slides"></lib-slider>
+  <lib-slider [slides]="slides"></lib-slider>
+  <lib-slider [slides]="slides"></lib-slider>
+  <lib-slider [slides]="slides"></lib-slider>
+}
