Multiple slides to show

--- a/projects/app/src/app/app.component.html
+++ b/projects/app/src/app/app.component.html
@@ -1,4 +1,4 @@
 
 @if (slides$ | async; as slides) {
-  <lib-slider [slides]="slides" [delay]="10000"></lib-slider>
+  <lib-slider [slides]="slides"></lib-slider>
 }
