--- a/projects/slider/src/lib/slider/slider.component.html
+++ b/projects/slider/src/lib/slider/slider.component.html
@@ -1,5 +1,10 @@
-<img [src]="currentSlide().image" width="400" height="400">
-
+<div class="wrapper">
+  @for (slide of currentSlides(); track slide.id; let i = $index) {
+    <div class="card" [style.background-image]="getSlideUrl(slide.image)">
+      <p>{{ slide.id }}</p>
+    </div>
+  }
+</div>
 <p>
   <button (click)="prev()">Prev</button>
   <button (click)="next()">Next</button>
