--- a/projects/slider/src/lib/slider/slider.component.scss
+++ b/projects/slider/src/lib/slider/slider.component.scss
@@ -3,40 +3,44 @@
   padding: 20px 0;
 }
 
-button {
-  background-color: #04AA6D; /* Green */
+.slider-btn {
+  background-color: #066ac9;
   border: none;
+  border-radius: 50%;
   color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
+  width: 50px;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   font-size: 16px;
+  cursor: pointer;
 
   &:not(:last-child) {
     margin-right: 15px;
   }
 }
 
-.card {
-  width: 300px;
-  height: 300px;
-  border: 1px solid #ccc;
+.slider-actions {
+  padding: 20px 0;
+  display: flex;
+  justify-content: center;
+}
+
+.slider-card {
+  width: 500px;
+  height: 400px;
+  border: 1px solid #e2e8f0;
   display: flex;
   justify-content: center;
   align-items: center;
   background-size: cover;
-  p {
-    padding: 10px 15px;
-    background-color: #fff;
-    font-size: 22px;
-    border-radius: 50%;
-  }
-
-  border-radius: 5px;
+  border-radius: 10px;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.1);
 }
 
-.wrapper {
+.slider-wrapper {
   display: flex;
+  justify-content: center;
   gap: 15px;
 }
